k8s/default/webapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
  namespace: default-namespace
  labels:
    app: webapi
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
      version: v1
  template:
    metadata:
      labels:
        app: webapi
        version: v1
    spec:
      containers:
        - name: webapi
          image: tfsantosbr/webapi:v1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 150m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
  namespace: default-namespace
  labels:
    app: webapi
    service: webapi
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: webapi
